[gd_scene load_steps=4 format=3 uid="uid://438y4wpihhn1"]

[ext_resource type="Script" path="res://src/entities/throw_arrow/throw_arrow_pivot.gd" id="1_sqp48"]
[ext_resource type="Texture2D" uid="uid://dulwjpoc146ay" path="res://assets/player/throw_crosshair.png" id="2_f5bvl"]
[ext_resource type="Texture2D" uid="uid://dl8ee3xpq222x" path="res://assets/player/dot.png" id="3_ggcs7"]

[node name="ThrowArrowPivot" type="Marker2D"]
process_mode = 4
script = ExtResource("1_sqp48")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Marker2D"]
remote_path = NodePath("../../SpriteContainer/ThrowArrowSprite")
update_rotation = false
update_scale = false

[node name="SpriteContainer" type="Node" parent="."]

[node name="ThrowArrowSprite" type="Sprite2D" parent="SpriteContainer"]
visible = false
position = Vector2(16, 0)
texture = ExtResource("2_f5bvl")

[node name="DotsContainer" type="Node" parent="."]

[node name="Dot" type="Sprite2D" parent="DotsContainer"]
visible = false
position = Vector2(5, 0)
texture = ExtResource("3_ggcs7")

[node name="Dot2" type="Sprite2D" parent="DotsContainer"]
visible = false
position = Vector2(9, 0)
texture = ExtResource("3_ggcs7")
